<resources>
    <string name="app_name">Radio Stations</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="welcome_big">Welcome!</string>
    <string name="welcome_small">Best Radio Stations Online on your phone.</string>

    <string name="delete_dialog_title">Delete Radio</string>
    <string name="delete_dialog_message">Do you want delete this station?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="connection_error_dialog_title">Connection Error</string>
    <string name="connection_error_dialog_message">No Internet connection. Please check your connection and try again.</string>
    <string name="connection_error_dialog_button">Retry</string>

    <string name="admob_true_or_false">true</string>
    <string name="drawer_visibility">@string/drawer_content_on</string>
    <string name="drawer_content_on">0</string>
    <string name="drawer_content_off">2</string>
    <string name="app_email">happy3811@diu.edu.bd.com</string>

    <!--navigation drawer menu name-->
    <string name="drawer_station">Station List</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_favorite">Favorite Stations</string>
    <string name="drawer_rate">Rate Our App</string>
    <string name="drawer_more">Like us on Facebook</string>
    <string name="drawer_setting">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_about">About</string>
        <string name="about">Listen over 50 best Hungarian Radio stations live on your Android Phone.
            Enjoy in variety of stations and genres.
            Use + button to add your own stations,
            or favorites to save the best stations and create your own playlist</string>
    <string name="radio_error">The radio is probably offline.</string>
    <string name="network_error">check network connection and try again</string>
    <string name="item_purchase_code">ea4a98dc-a164-4942-a17b-386d17094dd3</string>
</resources>
